--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/WebGLTest.loader.js";
+      const loaderUrl = buildUrl + "/WinionShop.loader.js";
       const config = {
-        dataUrl: buildUrl + "/WebGLTest.data",
-        frameworkUrl: buildUrl + "/WebGLTest.framework.js",
-        codeUrl: buildUrl + "/WebGLTest.wasm",
+        dataUrl: buildUrl + "/WinionShop.data",
+        frameworkUrl: buildUrl + "/WinionShop.framework.js",
+        codeUrl: buildUrl + "/WinionShop.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "dawntown",
         productName: "winionvirus",
