--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     </div>
     <div id="unity-fullscreen-button" style="display: none;"></div>
     <script>
-      const hideFullScreenButton = "true";
+      const hideFullScreenButton = "false";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/Information.loader.js";
+      const loaderUrl = buildUrl + "/WebGL Builds.loader.js";
       const config = {
-        dataUrl: buildUrl + "/Information.data",
-        frameworkUrl: buildUrl + "/Information.framework.js",
-        codeUrl: buildUrl + "/Information.wasm",
+        dataUrl: buildUrl + "/WebGL Builds.data",
+        frameworkUrl: buildUrl + "/WebGL Builds.framework.js",
+        codeUrl: buildUrl + "/WebGL Builds.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "dawntown",
         productName: "winionvirus",
